--- a/css/active2.css
+++ b/css/active2.css
@@ -1,3 +1,4 @@
+ /*Sets the background*/
  html::after {
      content: "";
      background-image: url('../images/image10.jpg');
@@ -11,11 +12,12 @@
      z-index: -1;
 	 
 }
+/*Transparent box properties with paragraph, images, headings*/
 div.transbox {
   margin: 75px;
   background-color: #ffffff;
   display:block;
-
+  opacity: 0.7
  
 }
 div.transbox h {
@@ -27,7 +29,7 @@ div.transbox h {
 
 }
 div.transbox img{
-
+	opacity:1.0;
 	width:450px;
 	height:300px;
 	float:right;
