--- a/css/pactive.css
+++ b/css/pactive.css
@@ -1,3 +1,5 @@
+ 
+ /*Sets background*/
  html::after {
      content: "";
      background-image: url('../images/image10.jpg');
@@ -11,6 +13,7 @@
      z-index: -1;
 	 
 }
+/*Limits the size of the pictures and position them next to each other*/
 .img {
     position: relative;
     float: left;
