--- a/css/pactive.css
+++ b/css/pactive.css
@@ -3,7 +3,7 @@
  html::after {
      content: "";
      background-image: url('../images/image10.jpg');
-	 background-repeat: no-repeat;
+     background-repeat: no-repeat;
      opacity:0.80;
      top: 0;
      left: 0;
@@ -17,7 +17,7 @@
 .img {
     padding-left: 15.7px; 
     position: relative;
-    float: left;
+    float: right;
     width:  300px;
     height: 300px;
     background-position: 50% 50%;
