--- a/css/pactive.css
+++ b/css/pactive.css
@@ -1,28 +1,23 @@
- 
+html { 
+  background: url('../images/image10.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} 
  /*Sets background*/
- html::after {
-     content: "";
-     background-image: url('../images/image10.jpg');
-     background-repeat: no-repeat;
-     opacity:0.80;
-     top: 0;
-     left: 0;
-     bottom: 0;
-     right: 0;	
-     position: fixed;
-     z-index: -1;
-	 
-}
+
 /*Limits the size of the pictures and position them next to each other*/
 .img {
-    padding-left: 15.7px; 
-    position: relative;
-    float: right;
+
+    padding-right: 11px;  
+    float: left;
     width:  300px;
     height: 300px;
-    background-position: 50% 50%;
-    background-repeat:   no-repeat;
-    background-size:     cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .topnav {
@@ -50,12 +45,4 @@
 .topnav a.active {
   background-color: #4CAF50;
   color: white;
-}
-body > header {
-	width:100%;
-	position:relative;
-	z-index:30;
-	background:#E0DCD9;
-	top:0;
-	left:0;
 }
