--- a/css/pactive.css
+++ b/css/pactive.css
@@ -1,25 +1,17 @@
-html { 
-  background: url('../images/image10.jpg') no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-} 
  /*Sets background*/
-
-/*Limits the size of the pictures and position them next to each other*/
-.img {
-
-    padding-right: 11px;  
-    float: left;
-    width:  300px;
-    height: 300px;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+ html::after {
+     content: "";
+     background-image: url('../images/image10.jpg');
+   background-repeat: no-repeat;
+     opacity:0.5;
+     top: 0;
+     left: 0;
+     bottom: 0;
+     right: 0;  
+     position: fixed;
+     z-index: -1;
+   background-size:cover;
 }
-
 .topnav {
   background-color: #333;
   overflow: hidden;
@@ -45,4 +37,50 @@ html {
 .topnav a.active {
   background-color: #4CAF50;
   color: white;
+}
+div.gallery {
+  border: 1px solid #ccc;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 300px;
+  height: 300px;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
