--- a/css/active4.css
+++ b/css/active4.css
@@ -1,16 +1,16 @@
- /*Sets the background*/
+ /*Sets background*/
  html::after {
      content: "";
      background-image: url('../images/image10.jpg');
-	 background-repeat: no-repeat;
-     opacity:0.50;
+   background-repeat: no-repeat;
+     opacity:0.5;
      top: 0;
      left: 0;
      bottom: 0;
-     right: 0;	
+     right: 0;  
      position: fixed;
      z-index: -1;
-	 
+   background-size:cover;
 }
 * {
 	box-sizing: border-box;
