--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
-/*Sets the background*/
+ /*Sets background*/
  html::after {
      content: "";
      background-image: url('../images/image10.jpg');
-	 background-repeat: no-repeat;
-     opacity:0.80;
+   background-repeat: no-repeat;
+     opacity:0.5;
      top: 0;
      left: 0;
      bottom: 0;
-     right: 0;	
+     right: 0;  
      position: fixed;
      z-index: -1;
-	 
+   background-size:cover;
 }
-
 .topnav {
   background-color: #333;
   overflow: hidden;
